--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,12 +5,20 @@
   "manifest_version": 2,
   "content_scripts": [
     {
-      "matches": ["https://www.tab4u.com/*"],
-      "js": ["transposer.js", "getUrlParams.js", "main.js"]
+      "matches": [
+        "https://www.tab4u.com/*"
+      ],
+      "js": [
+        "transposer.js",
+        "getUrlParams.js",
+        "main.js"
+      ]
     }
   ],
   "browser_action": {
     "default_icon": "icon.png"
   },
-  "permissions": ["activeTab"]
+  "permissions": [
+    "activeTab"
+  ]
 }
